@@ -1,6 +1,6 @@
 
 /*
- * $Id: providerMgr.c,v 1.58 2009/02/02 20:02:03 mchasal Exp $
+ * $Id: providerMgr.c,v 1.59 2009/03/17 00:20:38 buccella Exp $
  *
  * © Copyright IBM Corp. 2005, 2007
  *
@@ -1381,18 +1381,16 @@ static CMPIConstClass *_getConstClass(const char *ns, const char *cn, CMPIStatus
    binCtx.chunkedMode=binCtx.xmlAs=binCtx.noResp=0;
 
    binCtx.provA.socket = classProvInfoPtr->providerSockets.send;
-   irc = MSG_X_PROVIDER;
 
-   if (irc) {
-      _SFCB_TRACE(1, ("--- Invoking ClassProvider for %s %s",ns,cn));
-      resp = invokeProvider(&binCtx);
-      resp->rc--;
-      st->rc=resp->rc;
-      if (resp->rc == CMPI_RC_OK) {
-         ccl = relocateSerializedConstClass(resp->object[0].data);
-         ccl = ccl->ft->clone(ccl, NULL);
-      }
+   _SFCB_TRACE(1, ("--- Invoking ClassProvider for %s %s",ns,cn));
+   resp = invokeProvider(&binCtx);
+   resp->rc--;
+   st->rc=resp->rc;
+   if (resp->rc == CMPI_RC_OK) {
+      ccl = relocateSerializedConstClass(resp->object[0].data);
+      ccl = ccl->ft->clone(ccl, NULL);
    }
+
    _SFCB_TRACE(1, ("--- Invoking ClassProvider for %s %s rc: %d",ns,cn,resp->rc));
    
    path->ft->release(path);
